real lab/terraform/gcp/microk8s/files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Add the following line (staging first for testing, then apply the prod issuer)
    cert-manager.io/cluster-issuer: "letsencrypt-staging" # "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ranchertest.tk
    secretName: default-tls-secret
  rules:
  - host: ranchertest.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deployment
          servicePort: 80
      - path: /hello
        backend:
          serviceName: hello-deployment
          servicePort: 80
